// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home render DynaImage 1`] = `
<Fragment>
  <Loading
    className="className"
    isLoading={false}
  >
    <div
      key="0c2a2f043883bc6bf81ec1cacf9ec7a67a4bedcc"
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "cover",
          "filter": undefined,
          "transform": "",
        }
      }
    />
  </Loading>
  <img
    alt="Profile photo"
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;

exports[`Home render DynaResponsiveImage 1`] = `
<DynaResponsiveImageByContainer
  alt="Profile photo"
  className="className"
  onError={[Function]}
  onLoad={[Function]}
  srcSet={
    Object {
      "main": "https://www.example.com/eifel.jpg",
    }
  }
/>
`;

exports[`Home rendered with minimum set of props 1`] = `
<Fragment>
  <Loading
    className=""
    isLoading={false}
  >
    <div
      key="6e6d14261099690645f746872e5bd0749f90210e"
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "contain",
          "filter": undefined,
          "transform": "",
        }
      }
    />
  </Loading>
  <img
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;
